[package]
name = "diesel-order-with-direction"
version = "0.1.1"
edition = "2021"
license = "MIT"
categories = ["database"]
keywords = ["diesel", "query", "order", "ordering"]
repository = "https://github.com/susitsm/diesel-order-with-direction"
description = "Order diesel queries based on a direction parameter"

[dependencies]
diesel = { version = "1" }

[dev-dependencies]
diesel = { version = "1", features = ["mysql"] }
